# smartprinter

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
requirements/: requirements-dev.txt
smartprinter/: __init__.py  commons.py  printers.py
tests/: __init__.py  conftest.py  test_printers.py
